[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjax"
authors= [{name = "The Blackjax team", email = "remi@thetypicalset.com"}]
description = "Flexible and fast sampling in Python"
requires-python = ">=3.9"
keywords=[
    "probability",
    "machine learning",
    "statistics",
    "mcmc",
    "sampling",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "fastprogress>=1.0.0",
    "jax>=0.4.16",
    "jaxlib>=0.4.16",
    "jaxopt<=0.8.3",
    "optax>=0.1.7",
    "typing-extensions>=4.4.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/blackjax-devs/blackjax"
documentation = "https://blackjax-devs.github.io/blackjax/"
repository = "https://github.com/blackjax-devs/blackjax"

[project.license]
text="Apache License 2.0"
files=["LICENSE"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.setuptools]
platforms = [
    "Linux",
    "Mac OS-X",
    "Unix",
]

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.setuptools_scm]
write_to = "blackjax/_version.py"
